--- a/Autobus/View/YolcuDüzenView.xaml
+++ b/Autobus/View/YolcuDüzenView.xaml
@@ -1,31 +1,37 @@
-﻿<UserControl
-    x:Class="Autobus.View.YolcuDüzenView"
+﻿<UserControl x:Class="Autobus.View.YolcuDüzenView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:Extensions="clr-namespace:Extensions;assembly=Extensions"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:Autobus.View"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:model="clr-namespace:Autobus.Model"
-    xmlns:viewmodel="clr-namespace:Autobus.ViewModel"
+    xmlns:model="clr-namespace:Autobus.Model" xmlns:viewmodel="clr-namespace:Autobus.ViewModel"
     d:DataContext="{d:DesignInstance Type={x:Type viewmodel:YolcuDüzenViewModel}}"
-    d:DesignHeight="450"
-    d:DesignWidth="800"
-    UseLayoutRounding="True"
+    d:DesignHeight="450" d:DesignWidth="800" UseLayoutRounding="True"
     mc:Ignorable="d">
     <UserControl.Resources>
         <Extensions:NullToVisibilityConverter x:Key="NullToVisibilityConverter" />
     </UserControl.Resources>
     <Grid>
-        <GroupBox Header="YOLCU DÜZENİ">
+        <GroupBox>
+            <GroupBox.Header>
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock Text="YOLCU DÜZENİ " />
+                    <Rectangle Width="16" Fill="Orange" />
+                    <TextBlock Text="ÖDEMESİ YAPILMAMIŞ KOLTUK " />
+                    <Rectangle Width="16" Fill="Blue" />
+                    <TextBlock Text="ERKEK " />
+                    <Rectangle Width="16" Fill="Magenta" />
+                    <TextBlock Text="BAYAN" />
+                </StackPanel>
+            </GroupBox.Header>
             <Grid>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto" />
                     <RowDefinition />
                 </Grid.RowDefinitions>
                 <StackPanel>
-                    <ComboBox
-                        x:Name="CbSefer"
+                    <ComboBox x:Name="CbSefer"
                         HorizontalContentAlignment="Stretch"
                         ItemTemplate="{StaticResource ComboBoxItemSeferTemplate}"
                         ItemsPanel="{StaticResource ComboBoxItemsVirtualizedPanel}"
@@ -41,8 +47,7 @@
                             </Style>
                         </ComboBox.ItemContainerStyle>
                     </ComboBox>
-                    <ComboBox
-                        x:Name="CbAraç"
+                    <ComboBox x:Name="CbAraç"
                         IsEnabled="False"
                         ItemTemplate="{StaticResource AraçTemplate}"
                         ItemsPanel="{StaticResource ComboBoxItemsVirtualizedPanel}"
@@ -55,11 +60,8 @@
                         <ColumnDefinition Width="Auto" />
                         <ColumnDefinition />
                     </Grid.ColumnDefinitions>
-                    <Canvas
-                        Width="96"
-                        Height="96"
-                        HorizontalAlignment="Left"
-                        VerticalAlignment="Bottom"
+                    <Canvas Width="96" Height="96"
+                        HorizontalAlignment="Left" VerticalAlignment="Bottom"
                         Background="{StaticResource Direksiyon}"
                         RenderTransformOrigin="0.5,0.5">
                         <Canvas.RenderTransform>
@@ -71,24 +73,20 @@
                             </TransformGroup>
                         </Canvas.RenderTransform>
                     </Canvas>
-                    <ContentControl
-                        Grid.Column="1"
+                    <ContentControl Grid.Column="1"
                         Content="{Binding}"
                         RenderTransformOrigin="0.5,0.5">
                         <ContentControl.ContentTemplate>
                             <DataTemplate>
-                                <ItemsControl
-                                    Grid.Row="1"
+                                <ItemsControl Grid.Row="1"
                                     Margin="0,3,0,0"
                                     ItemsSource="{Binding KoltukÖnizlemeListe}"
                                     Style="{StaticResource VirtualizingStackPanelItemsControl}">
                                     <ItemsControl.ItemTemplate>
                                         <DataTemplate>
                                             <StackPanel Width="75" Height="75">
-                                                <TextBlock
-                                                    HorizontalAlignment="Center"
-                                                    FontSize="16"
-                                                    FontWeight="Bold"
+                                                <TextBlock HorizontalAlignment="Center"
+                                                    FontSize="16" FontWeight="Bold"
                                                     Visibility="{Binding DataContext.KoltukDolu, ConverterParameter=reverse, Converter={StaticResource NullToVisibilityConverter}, ElementName=Tb}">
                                                     <Hyperlink Command="{Binding YolcuDüzenViewModel.MüşteriEkleEkranı, Mode=OneWay, Source={StaticResource MainViewModel}}" Style="{StaticResource HyperLinkRed}">
                                                         <Hyperlink.CommandParameter>
@@ -102,12 +100,9 @@
                                                         <Run Text="{Binding Mode=OneWay}" />
                                                     </Hyperlink>
                                                 </TextBlock>
-                                                <TextBlock
-                                                    x:Name="Tb"
-                                                    HorizontalAlignment="Center"
-                                                    VerticalAlignment="Center"
-                                                    FontSize="14"
-                                                    Foreground="White">
+                                                <TextBlock x:Name="Tb"
+                                                    HorizontalAlignment="Center" VerticalAlignment="Center"
+                                                    FontSize="14" Foreground="White">
                                                     <TextBlock.DataContext>
                                                         <MultiBinding Converter="{StaticResource KoltukNoMüşteriConverter}">
                                                             <Binding Mode="OneWay" />
@@ -119,8 +114,7 @@
                                                             <ListBox ItemsSource="{Binding Sipariş}">
                                                                 <ListBox.ItemTemplate>
                                                                     <DataTemplate>
-                                                                        <ComboBox
-                                                                            ItemTemplate="{StaticResource ComboBoxItemSiparişTemplate}"
+                                                                        <ComboBox ItemTemplate="{StaticResource ComboBoxItemSiparişTemplate}"
                                                                             ItemsSource="{Binding Otobüs.Ürünler.Ürün, Source={StaticResource MainViewModel}}"
                                                                             SelectedValue="{Binding ÜrünId}"
                                                                             SelectedValuePath="Id"
@@ -128,9 +122,7 @@
                                                                     </DataTemplate>
                                                                 </ListBox.ItemTemplate>
                                                             </ListBox>
-                                                            <Image
-                                                                MaxWidth="128"
-                                                                MaxHeight="128"
+                                                            <Image MaxWidth="128" MaxHeight="128"
                                                                 Source="{Binding Resim, Converter={StaticResource FilePathMergeConverter}}" />
                                                         </StackPanel>
                                                     </TextBlock.ToolTip>
@@ -147,6 +139,9 @@
                                                             </DataTrigger>
                                                             <DataTrigger Binding="{Binding ElementName=Tb, Path=DataContext.Cinsiyet}" Value="1">
                                                                 <Setter Property="Background" Value="{StaticResource KoltukBayan}" />
+                                                            </DataTrigger>
+                                                            <DataTrigger Binding="{Binding ElementName=Tb, Path=DataContext.BiletÖdendi}" Value="false">
+                                                                <Setter Property="Background" Value="{StaticResource KoltukÖdenmedi}" />
                                                             </DataTrigger>
                                                         </Style.Triggers>
                                                     </Style>
