--- a/Autobus/View/YolcuGirişView.xaml
+++ b/Autobus/View/YolcuGirişView.xaml
@@ -1,6 +1,7 @@
 ﻿<UserControl x:Class="Autobus.View.YolcuGirişView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:ComponentModel="clr-namespace:System.ComponentModel;assembly=WindowsBase"
     xmlns:Extensions="clr-namespace:Extensions;assembly=Extensions"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:Autobus.View"
@@ -9,6 +10,13 @@
     d:DataContext="{d:DesignInstance Type={x:Type viewmodel:YolcuGirişViewModel}}"
     d:DesignHeight="600" d:DesignWidth="1024"
     mc:Ignorable="d">
+    <UserControl.Resources>
+        <CollectionViewSource x:Key="Müşteriler" Source="{Binding ElementName=CbSefer, Path=SelectedItem.Müşteri}">
+            <CollectionViewSource.SortDescriptions>
+                <ComponentModel:SortDescription Direction="Ascending" PropertyName="KoltukNo" />
+            </CollectionViewSource.SortDescriptions>
+        </CollectionViewSource>
+    </UserControl.Resources>
     <Grid>
         <GroupBox Header="YOLCU İŞLEMLERİ">
             <Grid>
@@ -73,8 +81,9 @@
                             SelectedValuePath="Id" />
                         <TextBlock Text="KOLTUK SEÇ" />
                         <ComboBox ItemsPanel="{StaticResource ComboBoxItemsVirtualizedPanel}"
-                            ItemsSource="{Binding SeçiliAraç.KoltukÖnizlemeListe}" Validation.ErrorTemplate="{StaticResource ValidationErrorTemplate}"
-                            SelectedItem="{Binding Müşteri.KoltukNo, ValidatesOnDataErrors=True}">
+                            ItemsSource="{Binding SeçiliAraç.KoltukÖnizlemeListe}"
+                            SelectedItem="{Binding Müşteri.KoltukNo, ValidatesOnDataErrors=True}"
+                            Validation.ErrorTemplate="{StaticResource ValidationErrorTemplate}">
                             <ComboBox.ItemContainerStyle>
                                 <Style TargetType="ComboBoxItem">
                                     <Setter Property="IsEnabled">
@@ -164,7 +173,7 @@
                             <ListBox Grid.Column="1"
                                 d:ItemsSource="{d:SampleData ItemCount=5}"
                                 ItemTemplate="{StaticResource ListBoxMüşteriTemplate}"
-                                ItemsSource="{Binding ElementName=CbSefer, Path=SelectedItem.Müşteri}"
+                                ItemsSource="{Binding Source={StaticResource Müşteriler}}"
                                 SelectedItem="{Binding YolcuGirişViewModel.SeçiliMüşteri, Source={StaticResource MainViewModel}}" />
                         </Grid>
                         <Grid Grid.Row="1"
